--- a/test_no_obstacles/analysis.ipynb
+++ b/test_no_obstacles/analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -225,12 +225,13 @@
        "[1200 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "single = single[single['uptime'] > 0]\n",
     "single"
    ]
   },
